--- a/hal/src/hal/package.xml
+++ b/hal/src/hal/package.xml
@@ -19,6 +19,10 @@
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
+  <build_depend>dls2_interface</build_depend>
+  <exec_depend>dls2_interface</exec_depend>
+
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
