adding useful launcher, and new torque message

--- a/hal/src/dls2_interface/CMakeLists.txt
+++ b/hal/src/dls2_interface/CMakeLists.txt
@@ -21,6 +21,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/ControlSignal.msg"
   "msg/ArmState.msg"
   "msg/ArmTrajectoryGenerator.msg"
+  "msg/ArmControlSignal.msg"
 )
 
 ament_export_dependencies(rosidl_default_runtime)
