--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "unitree_z1/z1_controller"]
 	path = unitree_z1/z1_controller
 	url = https://github.com/unitreerobotics/z1_controller.git
+[submodule "unitree_z1/z1_sdk"]
+	path = unitree_z1/z1_sdk
+	url = git@github.com:iit-DLSLab/z1_sdk.git
